Implemented SampleBasedMetrics & implemented a few speed tests

--- a/notebooks/AiBasedDetection.ipynb
+++ b/notebooks/AiBasedDetection.ipynb
@@ -32,6 +32,7 @@
     "from typing import List\n",
     "from collections import Counter\n",
     "import functools\n",
+    "import pickle\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib\n",
@@ -51,7 +52,7 @@
     "    RESPIRATORY_EVENT_TYPE__GROUND_TRUTH_CLASS, SlidingWindowDataset\n",
     "from util.mathutil import cluster_1d, IntRange\n",
     "from ai_based.utilities.inference import retrieve_respiratory_events\n",
-    "from util.event_based_metrics import get_overlaps, get_n_detected_annotations, OverlapsBasedConfusionMatrix\n",
+    "from util.event_based_metrics import get_overlaps, get_n_detected_annotations, OverlapsBasedConfusionMatrix, SampleBasedConfusionMatrix\n",
     "\n",
     "# Some preparations to pretty-print tensors & ndarrays\n",
     "np.set_printoptions(edgeitems=10)\n",
@@ -79,7 +80,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "EXPERIMENT_DIR = RESULTS_PATH_AI / \"cnn-5-gt_point-bs128-peakified_signals-low_wd-train_noise\"\n",
+    "EXPERIMENT_DIR = RESULTS_PATH_AI / \"mlp-1-gt_point-bs128-peakified_signals-low_wd-train_noise_0.428\"\n",
     "COMBINATION_DIR = EXPERIMENT_DIR / \"combination_0\"\n",
     "REPETITION_DIR = COMBINATION_DIR / \"repetition_0\"\n",
     "\n",
@@ -88,11 +89,11 @@
     "assert COMBINATION_DIR.is_dir() and COMBINATION_DIR.exists()\n",
     "assert REPETITION_DIR.is_dir() and REPETITION_DIR.exists()\n",
     "\n",
-    "if (REPETITION_DIR / \"log.pt\").exists():\n",
-    "    log = torch.load(REPETITION_DIR / \"log.pt\", map_location=torch.device(\"cpu\"))\n",
-    "else:\n",
-    "    log = None\n",
-    "    print(\"No training logs available\")\n",
+    "# if (REPETITION_DIR / \"log.pt\").exists():\n",
+    "#     log = torch.load(REPETITION_DIR / \"log.pt\", map_location=torch.device(\"cpu\"))\n",
+    "# else:\n",
+    "#     log = None\n",
+    "#     print(\"No training logs available\")\n",
     "\n",
     "if (REPETITION_DIR / \"eval.pt\").exists():\n",
     "    final_validation_eval_results = torch.load(REPETITION_DIR / \"eval.pt\", map_location=torch.device(\"cpu\"))\n",
@@ -118,7 +119,8 @@
     "model.eval()\n",
     "model.to(device)\n",
     "\n",
-    "model"
+    "print(f\"Number of model parameters: {model.num_parameters():,}\")\n",
+    "model\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -258,7 +260,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "dataset_folder = DATA_PATH / \"training\" / \"tr03-0005\"\n",
+    "dataset_folder = DATA_PATH / \"Physionet_preprocessed\" / \"tr04-0247\"\n",
     "\n",
     "ai_dataset_config = copy.deepcopy(hyperparams[\"test_dataset_config\"])\n",
     "ai_dataset_config.dataset_folders = [dataset_folder]\n",
@@ -350,7 +352,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "events_dict = retrieve_respiratory_events(model=model, ai_dataset=ai_dataset, batch_size=batch_size, progress_fn=tqdm, min_cluster_length_s=7)\n",
+    "events_dict = retrieve_respiratory_events(model=model, ai_dataset=ai_dataset, batch_size=batch_size, progress_fn=tqdm, min_cluster_length_s=10, max_cluster_distance_s=1)\n",
     "detected_respiratory_events = events_dict[sliding_window_dataset.dataset_name]\n",
     "\n",
     "detected_hypopnea_events_ = [d_ for d_ in detected_respiratory_events if d_.event_type == RespiratoryEventType.Hypopnea]\n",
@@ -437,7 +439,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "event_num = 11\n",
+    "event_num = 2\n",
     "# event = annotated_respiratory_events[event_num]\n",
     "event = detected_respiratory_events[event_num]\n",
     "# event = detected_but_not_annotated[event_num]\n",
@@ -459,7 +461,7 @@
     "print(\" - \" + \"\\n - \".join([f\"{e.event_type.name}: {(e.end-e.start).total_seconds():.1f}s\" for e in detected_in_window]))\n",
     "\n",
     "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
-    "_ = window_data.signals.plot(figsize=(25, 12), subplots=True)"
+    "_ = window_data.signals.plot(figsize=(25, 12), subplots=True)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -495,14 +497,14 @@
    "outputs": [],
    "source": [
     "# Use training dataset folders as per train-test-split\n",
-    "data_folder = DATA_PATH / \"training\"\n",
+    "data_folder = DATA_PATH / \"Physionet_preprocessed\"\n",
     "train_test_folders = read_train_test_split_yaml(input_yaml=TRAIN_TEST_SPLIT_YAML, prefix_base_folder=data_folder)\n",
-    "dataset_folders = train_test_folders.train\n",
+    "dataset_folders = train_test_folders.test\n",
     "del train_test_folders\n",
     "\n",
     "# Use a given, small set of dataset folders\n",
-    "dataset_names = (\"tr03-0005\", \"tr03-0289\", \"tr03-0921\", \"tr04-1078\", \"tr07-0168\")\n",
-    "dataset_folders = [DATA_PATH / \"training\" / name for name in dataset_names]"
+    "# dataset_names = (\"tr03-0005\", \"tr03-0289\", \"tr03-0921\", \"tr04-1078\", \"tr07-0168\")\n",
+    "# dataset_folders = [DATA_PATH / \"training\" / name for name in dataset_names]"
    ],
    "metadata": {
     "collapsed": false,
@@ -596,25 +598,43 @@
    "outputs": [],
    "source": [
     "# Run metrics on our detections\n",
-    "overall_confusion_matrix = OverlapsBasedConfusionMatrix.empty()\n",
+    "overall_confusion_matrix__overlap_based = OverlapsBasedConfusionMatrix.empty()\n",
+    "overall_confusion_matrix__sample_based = SampleBasedConfusionMatrix.empty()\n",
     "n_annotated_events: int = 0\n",
     "n_detected_events: int = 0\n",
     "n_detected_annotations: int = 0\n",
-    "for sliding_window_dataset in sliding_window_datasets:\n",
+    "n_overlaps: int = 0\n",
+    "for sliding_window_dataset in tqdm(sliding_window_datasets, total=len(sliding_window_datasets), desc=\"Determine metrics\"):\n",
     "    detected_events = detected_events_dict[sliding_window_dataset.dataset_name]\n",
     "    n_detected_events += len(detected_events)\n",
     "    n_annotated_events += len(sliding_window_dataset.respiratory_events)\n",
     "\n",
     "    cm_ = OverlapsBasedConfusionMatrix(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
-    "    overall_confusion_matrix += cm_\n",
+    "    overall_confusion_matrix__overlap_based += cm_\n",
+    "\n",
+    "    cm_ = SampleBasedConfusionMatrix(time_index=sliding_window_dataset.signals.index, annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
+    "    overall_confusion_matrix__sample_based += cm_\n",
+    "\n",
     "    o_ = get_n_detected_annotations(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
     "    n_detected_annotations += o_\n",
+    "    o_ = len(get_overlaps(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events))\n",
+    "    n_overlaps += o_\n",
     "\n",
     "print(f\"Number of annotated respiratory events: {n_annotated_events}\")\n",
     "print(f\"Number of detected respiratory events: {n_detected_events}\")\n",
+    "print(f\"Number of overlapping events: {n_overlaps}\")\n",
     "print()\n",
-    "print(f\"Number of detected annotations (overlaps): {n_detected_annotations} out of {n_annotated_events}\")\n",
-    "print(f\" -> Annotation recall: {n_detected_annotations/n_annotated_events:.3f}\")"
+    "print(f\"Number of detected annotations: {n_detected_annotations} out of {n_annotated_events}\")\n",
+    "print(f\" -> Annotation recall: {n_detected_annotations/n_annotated_events:.3f}\")\n",
+    "print()\n",
+    "print(f\"Sample-based acquired metrics:\\n\"\n",
+    "      f\" - Accuracy (5-class-based): {overall_confusion_matrix__sample_based.get_accuracy()}\\n\"\n",
+    "      f\" - Cohen Kappa (5-class-based): {overall_confusion_matrix__sample_based.get_cohen_kappa()}\\n\"\n",
+    "      f\" - Accuracy (binary-based): {overall_confusion_matrix__sample_based.get_binary_accuracy()}\\n\"\n",
+    "      f\" - Cohen Kappa (binary-based): {overall_confusion_matrix__sample_based.get_binary_cohen_kappa()}\")\n",
+    "print()\n",
+    "print(\"Overlap-based acquired metrics:\")\n",
+    "print(f\" -> {overall_confusion_matrix__overlap_based.get_macro_scores()}\")\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -637,12 +657,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "macro_scores = overall_confusion_matrix.get_macro_scores()\n",
-    "print(\"Confusion-matrix based macro scores:\")\n",
-    "print(f\" -> {macro_scores}\")\n",
-    "\n",
-    "plt.figure(figsize=(7, 7))\n",
-    "overall_confusion_matrix.plot(title=f\"Confusion matrix for classification confidence over {len(dataset_folders)} datasets\")"
+    "overall_confusion_matrix__overlap_based.plot(title=f\"Confusion matrix for classification confidence over {len(dataset_folders)} datasets\")"
    ],
    "metadata": {
     "collapsed": false,
