--- a/notebooks/DatasetInspection.ipynb
+++ b/notebooks/DatasetInspection.ipynb
@@ -27,6 +27,7 @@
     "import pickle\n",
     "from typing import Dict, Tuple\n",
     "from collections import Counter\n",
+    "from pathlib import Path\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.dates import date2num\n",
@@ -37,12 +38,14 @@
     "import scipy.fftpack\n",
     "\n",
     "from util.paths import DATA_PATH\n",
-    "from util.datasets import SlidingWindowDataset, read_physionet_dataset, RespiratoryEventType\n",
+    "from util.datasets import SlidingWindowDataset, read_physionet_dataset, RespiratoryEventType, GroundTruthClass\n",
     "from util.filter import apply_butterworth_bandpass_filter, apply_butterworth_lowpass_filter\n",
     "from util.mathutil import get_peaks, PeakType, cluster_1d, IntRange\n",
     "from rule_based import detect_respiratory_events\n",
     "from rule_based.detector import _detect_airflow_resp_events\n",
-    "from util.event_based_metrics import EventBasedConfusionMatrix, get_overlaps\n",
+    "from util.event_based_metrics import OverlapsBasedConfusionMatrix, get_overlaps\n",
+    "from util.mathutil import normalize_robust\n",
+    "from ai_based.data_handling.ai_datasets import AiDataset\n",
     "\n",
     "# Makes numpy raise errors instead of outputting warnings\n",
     "np.seterr('raise')\n",
@@ -62,10 +65,12 @@
    },
    "outputs": [],
    "source": [
-    "dataset_folder = DATA_PATH / \"training\" / \"tr03-0005\"\n",
+    "dataset_folder = DATA_PATH / \"tr04-0808\"\n",
     "config = SlidingWindowDataset.Config(\n",
     "    downsample_frequency_hz=5,\n",
-    "    time_window_size=pd.Timedelta(\"5 minutes\"),\n",
+    "    time_window_size=pd.to_timedelta(\"5 minutes\"),\n",
+    "    time_window_stride=5,\n",
+    "    ground_truth_vector_width=1\n",
     ")\n",
     "sliding_window_dataset = SlidingWindowDataset(config=config, dataset_folder=dataset_folder, allow_caching=True)\n",
     "\n",
@@ -119,7 +124,7 @@
     "annotated_events_outline_series = pd.Series(data=annotated_events_outline_mat, index=sliding_window_dataset.signals.index)\n",
     "sliding_window_dataset.signals[\"Annotated respiratory events\"] = annotated_events_outline_series\n",
     "\n",
-    "del annotated_events_outline_series, annotated_events_outline_mat"
+    "del annotated_events_outline_series, annotated_events_outline_mat\n"
    ]
   },
   {
