--- a/notebooks/RuleBasedDetection.ipynb
+++ b/notebooks/RuleBasedDetection.ipynb
@@ -29,6 +29,8 @@
     "from collections import Counter\n",
     "import functools\n",
     "from pathlib import Path\n",
+    "from copy import deepcopy\n",
+    "import pickle\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.dates import date2num\n",
@@ -44,7 +46,8 @@
     "from util.filter import apply_butterworth_bandpass_filter, apply_butterworth_lowpass_filter\n",
     "from util.mathutil import get_peaks, PeakType, cluster_1d, IntRange\n",
     "from rule_based import detect_respiratory_events, detect_respiratory_events_multicore\n",
-    "from util.event_based_metrics import OverlapsBasedConfusionMatrix, get_overlaps, get_n_detected_annotations\n",
+    "from util.event_based_metrics import OverlapsBasedConfusionMatrix, get_overlaps, get_n_detected_annotations, SampleBasedConfusionMatrix\n",
+    "from ai_based.utilities.print_helpers import pretty_print_dict\n",
     "\n",
     "# Makes numpy raise errors instead of outputting warnings\n",
     "np.seterr('raise')\n",
@@ -76,10 +79,12 @@
    },
    "outputs": [],
    "source": [
-    "dataset_folder = DATA_PATH / \"training\" / \"tr03-0005\"\n",
+    "dataset_folder = DATA_PATH / \"Physionet_preprocessed\" / \"tr04-0400\"\n",
     "config = SlidingWindowDataset.Config(\n",
     "    downsample_frequency_hz=5,\n",
-    "    time_window_size=pd.Timedelta(\"5 minutes\")\n",
+    "    time_window_size=pd.Timedelta(\"5 minutes\"),\n",
+    "    time_window_stride=5,\n",
+    "    ground_truth_vector_width=1\n",
     ")\n",
     "sliding_window_dataset = SlidingWindowDataset(config=config, dataset_folder=dataset_folder, allow_caching=True)\n",
     "\n",
@@ -234,7 +239,7 @@
     "print(\"Confusion-matrix based macro scores:\")\n",
     "print(f\" -> {macro_scores}\")\n",
     "\n",
-    "confusion_matrix.plot(title=\"Confusion matrix for classification confidence over a single dataset\")\n"
+    "confusion_matrix.plot(title=\"Confusion matrix for classification confidence over a single dataset\")"
    ]
   },
   {
@@ -259,7 +264,7 @@
    },
    "outputs": [],
    "source": [
-    "event_num = 29\n",
+    "event_num = 6\n",
     "event = annotated_respiratory_events[event_num]\n",
     "# event = detected_respiratory_events[event_num]\n",
     "# event = detected_but_not_annotated[event_num]\n",
@@ -280,7 +285,7 @@
     "print(\" - \" + \"\\n - \".join([f\"{e.event_type.name}: {(e.end-e.start).total_seconds():.1f}s\" for e in detected_in_window]))\n",
     "\n",
     "window_data = sliding_window_dataset.get(center_point=window_center_point)\n",
-    "_ = window_data.signals.plot(figsize=(25, 12), subplots=True)\n"
+    "_ = window_data.signals.plot(figsize=(25, 12), subplots=True)"
    ]
   },
   {
@@ -310,14 +315,14 @@
    "outputs": [],
    "source": [
     "# Use training dataset folders as per train-test-split\n",
-    "data_folder = DATA_PATH / \"training\"\n",
+    "data_folder = DATA_PATH / \"Physionet_preprocessed\"\n",
     "train_test_folders = read_train_test_split_yaml(input_yaml=TRAIN_TEST_SPLIT_YAML, prefix_base_folder=data_folder)\n",
-    "dataset_folders = train_test_folders.train\n",
-    "del train_test_folders\n",
+    "dataset_folders = deepcopy(train_test_folders.test)\n",
+    "# dataset_folders.extend(train_test_folders.train)\n",
     "\n",
     "# Use a given, small set of dataset folders\n",
-    "dataset_names = (\"tr03-0005\", \"tr03-0289\", \"tr03-0921\", \"tr04-1078\", \"tr07-0168\")\n",
-    "dataset_folders = [DATA_PATH / \"training\" / name for name in dataset_names]"
+    "# dataset_names = (\"tr03-0005\", \"tr03-0289\", \"tr03-0921\", \"tr04-1078\", \"tr07-0168\")\n",
+    "# dataset_folders = [DATA_PATH / \"training\" / name for name in dataset_names]"
    ],
    "metadata": {
     "collapsed": false,
@@ -350,13 +355,16 @@
     "    signals += [sliding_window_dataset.signals]\n",
     "    awake_series += [sliding_window_dataset.awake_series]\n",
     "\n",
+    "\n",
     "# Do the multicore detection work\n",
     "progress_fn_ = functools.partial(tqdm, total=len(sliding_window_datasets), desc=\"Detecting respiratory events\")\n",
     "detected_event_lists: List[List[RespiratoryEvent]] = detect_respiratory_events_multicore(\n",
     "    signals=signals,\n",
     "    sample_frequency_hz=config.downsample_frequency_hz,\n",
     "    awake_series=None,  # Insert 'awake_series' from above, such that respiratory events during wake times are neglected\n",
-    "    progress_fn=progress_fn_\n",
+    "    progress_fn=progress_fn_,\n",
+    "    discard_invalid_hypopneas=True,  # Must be True as per AASM manual\n",
+    "    min_event_length_seconds=10  # 10s equals the \"default\" as per AASM manual\n",
     ")"
    ],
    "metadata": {
@@ -373,10 +381,7 @@
     "of annotated & detected respiratory events, which results in the __annotation recall__ score."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -385,24 +390,42 @@
    "outputs": [],
    "source": [
     "# Run metrics on our detections\n",
-    "overall_confusion_matrix = OverlapsBasedConfusionMatrix.empty()\n",
+    "overall_confusion_matrix__overlap_based = OverlapsBasedConfusionMatrix.empty()\n",
+    "overall_confusion_matrix__sample_based = SampleBasedConfusionMatrix.empty()\n",
     "n_annotated_events: int = 0\n",
     "n_detected_events: int = 0\n",
     "n_detected_annotations: int = 0\n",
-    "for sliding_window_dataset, detected_events in zip(sliding_window_datasets, detected_event_lists):\n",
+    "n_overlaps: int = 0\n",
+    "for sliding_window_dataset, detected_events in tqdm(zip(sliding_window_datasets, detected_event_lists), total=len(sliding_window_datasets), desc=\"Determine metrics\"):\n",
     "    n_detected_events += len(detected_events)\n",
     "    n_annotated_events += len(sliding_window_dataset.respiratory_events)\n",
     "\n",
     "    cm_ = OverlapsBasedConfusionMatrix(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
-    "    overall_confusion_matrix += cm_\n",
+    "    overall_confusion_matrix__overlap_based += cm_\n",
+    "\n",
+    "    cm_ = SampleBasedConfusionMatrix(time_index=sliding_window_dataset.signals.index, annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
+    "    overall_confusion_matrix__sample_based += cm_\n",
+    "\n",
     "    o_ = get_n_detected_annotations(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
     "    n_detected_annotations += o_\n",
+    "    o_ = len(get_overlaps(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events))\n",
+    "    n_overlaps += o_\n",
     "\n",
     "print(f\"Number of annotated respiratory events: {n_annotated_events}\")\n",
     "print(f\"Number of detected respiratory events: {n_detected_events}\")\n",
+    "print(f\"Number of overlapping events: {n_overlaps}\")\n",
     "print()\n",
-    "print(f\"Number of detected annotations (overlaps): {n_detected_annotations} out of {n_annotated_events}\")\n",
-    "print(f\" -> Annotation recall: {n_detected_annotations/n_annotated_events:.3f}\")"
+    "print(f\"Number of detected annotations: {n_detected_annotations} out of {n_annotated_events}\")\n",
+    "print(f\" -> Annotation recall: {n_detected_annotations/n_annotated_events:.3f}\")\n",
+    "print()\n",
+    "print(f\"Sample-based acquired metrics:\\n\"\n",
+    "      f\" - Accuracy (5-class-based): {overall_confusion_matrix__sample_based.get_accuracy()}\\n\"\n",
+    "      f\" - Cohen Kappa (5-class-based): {overall_confusion_matrix__sample_based.get_cohen_kappa()}\\n\"\n",
+    "      f\" - Accuracy (binary-based): {overall_confusion_matrix__sample_based.get_binary_accuracy()}\\n\"\n",
+    "      f\" - Cohen Kappa (binary-based): {overall_confusion_matrix__sample_based.get_binary_cohen_kappa()}\")\n",
+    "print()\n",
+    "print(\"Overlap-based acquired metrics:\")\n",
+    "print(f\" -> {overall_confusion_matrix__overlap_based.get_macro_scores()}\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -428,13 +451,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "macro_scores = overall_confusion_matrix.get_macro_scores()\n",
-    "print(\"Confusion-matrix based macro scores:\")\n",
-    "print(f\" -> {macro_scores}\")\n",
-    "\n",
     "plt.figure(figsize=(7, 7))\n",
-    "overall_confusion_matrix.plot(title=f\"Confusion matrix for classification confidence over {len(dataset_folders)} datasets\")\n",
-    "\n"
+    "overall_confusion_matrix__overlap_based.plot(title=f\"Confusion matrix for classification confidence over {len(dataset_folders)} datasets\")\n"
    ],
    "metadata": {
     "collapsed": false,
