Added pretrained model for MLP & few updates in notebooks

--- a/notebooks/AiBasedDetection.ipynb
+++ b/notebooks/AiBasedDetection.ipynb
@@ -45,7 +45,7 @@
     "from ai_based.data_handling.training_batch import TrainingBatch\n",
     "from ai_based.networks import MLP, Cnn1D\n",
     "from ai_based.utilities.evaluators import ConfusionMatrixEvaluator\n",
-    "from util.paths import RESULTS_PATH_AI, TRAIN_TEST_SPLIT_YAML, DATA_PATH\n",
+    "from util.paths import RESULTS_PATH_AI, TRAIN_TEST_SPLIT_YAML, DATA_PATH, PRETRAINED_MODELS_PATH\n",
     "from util.train_test_split import read_train_test_split_yaml\n",
     "from ai_based.utilities.evaluators import BaseEvaluator\n",
     "from util.datasets import GroundTruthClass, RespiratoryEvent, RespiratoryEventType, \\\n",
@@ -80,7 +80,8 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "EXPERIMENT_DIR = RESULTS_PATH_AI / \"mlp-1-gt_point-bs128-peakified_signals-low_wd-train_noise_0.428\"\n",
+    "# EXPERIMENT_DIR = RESULTS_PATH_AI / \"experiment_name\"  # <--- Use this to load freshly-trained experiments\n",
+    "EXPERIMENT_DIR = PRETRAINED_MODELS_PATH / \"mlp\"\n",
     "COMBINATION_DIR = EXPERIMENT_DIR / \"combination_0\"\n",
     "REPETITION_DIR = COMBINATION_DIR / \"repetition_0\"\n",
     "\n",
@@ -88,12 +89,6 @@
     "assert EXPERIMENT_DIR.is_dir() and EXPERIMENT_DIR.exists()\n",
     "assert COMBINATION_DIR.is_dir() and COMBINATION_DIR.exists()\n",
     "assert REPETITION_DIR.is_dir() and REPETITION_DIR.exists()\n",
-    "\n",
-    "# if (REPETITION_DIR / \"log.pt\").exists():\n",
-    "#     log = torch.load(REPETITION_DIR / \"log.pt\", map_location=torch.device(\"cpu\"))\n",
-    "# else:\n",
-    "#     log = None\n",
-    "#     print(\"No training logs available\")\n",
     "\n",
     "if (REPETITION_DIR / \"eval.pt\").exists():\n",
     "    final_validation_eval_results = torch.load(REPETITION_DIR / \"eval.pt\", map_location=torch.device(\"cpu\"))\n",
@@ -120,63 +115,7 @@
     "model.to(device)\n",
     "\n",
     "print(f\"Number of model parameters: {model.num_parameters():,}\")\n",
-    "model\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Plot parameters that were logged during training\n",
-    "These are, amongst others:\n",
-    "- Training loss\n",
-    "- Training metrics (precision, recall, f1-score)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "fig, axes = plt.subplots(3, 2, figsize=(24, 36))\n",
-    "\n",
-    "axes[0, 0].set_title(\"Loss\")\n",
-    "axes[0, 0].plot(log[\"training\"][\"loss\"])\n",
-    "\n",
-    "axes[0, 1].set_title(\"Weighted mean IoU\")\n",
-    "# axes[0, 1].plot(training_miou, label=\"training\")\n",
-    "# axes[0, 1].plot(validation_miou, label=\"validation\")\n",
-    "axes[0, 1].legend()\n",
-    "\n",
-    "axes[1, 0].set_title(\"Detection Recall\")\n",
-    "# axes[1, 0].plot(log[\"training\"][\"detection_recall\"], label=\"training\")\n",
-    "# axes[1, 0].plot(log[\"validation\"][\"detection_recall\"], label=\"validation\")\n",
-    "axes[1, 0].legend()\n",
-    "\n",
-    "axes[1, 1].set_title(\"Placement Accuracy\")\n",
-    "# axes[1, 1].plot(log[\"training\"][\"placement_accuracy\"], label=\"training\")\n",
-    "# axes[1, 1].plot(log[\"validation\"][\"placement_accuracy\"], label=\"validation\")\n",
-    "axes[1, 1].legend()\n",
-    "\n",
-    "axes[2, 0].set_title(\"Object Height Accuracy\")\n",
-    "# axes[2, 0].plot(log[\"training\"][\"height_classification_accuracy\"], label=\"training\")\n",
-    "# axes[2, 0].plot(log[\"validation\"][\"height_classification_accuracy\"], label=\"validation\")\n",
-    "axes[2, 0].legend()\n",
-    "\n",
-    "axes[2, 1].set_title(\"Pixel Height Accuracy\")\n",
-    "# axes[2, 1].plot(log[\"training\"][\"accuracy\"], label=\"training\")\n",
-    "# axes[2, 1].plot(log[\"validation\"][\"accuracy\"], label=\"validation\")\n",
-    "axes[2, 1].legend()\n",
-    "\n",
-    "plt.show()"
+    "model"
    ],
    "metadata": {
     "collapsed": false,
@@ -208,7 +147,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "dataset_folder = DATA_PATH / \"training\" / \"tr03-0005\"\n",
+    "dataset_folder = DATA_PATH / \"training\" / \"tr07-0709\"\n",
     "\n",
     "ai_dataset_config = copy.deepcopy(hyperparams[\"test_dataset_config\"])\n",
     "ai_dataset_config.dataset_folders = [dataset_folder]\n",
@@ -260,7 +199,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "dataset_folder = DATA_PATH / \"Physionet_preprocessed\" / \"tr04-0247\"\n",
+    "dataset_folder = DATA_PATH / \"training\" / \"tr07-0709\"\n",
     "\n",
     "ai_dataset_config = copy.deepcopy(hyperparams[\"test_dataset_config\"])\n",
     "ai_dataset_config.dataset_folders = [dataset_folder]\n",
@@ -411,12 +350,18 @@
     "print()\n",
     "\n",
     "# Obtain confusion-matrix based metrics\n",
-    "confusion_matrix = OverlapsBasedConfusionMatrix(annotated_events=annotated_respiratory_events, detected_events=detected_respiratory_events)\n",
-    "macro_scores = confusion_matrix.get_macro_scores()\n",
-    "print(\"Confusion-matrix based macro scores:\")\n",
+    "confusion_matrix__overlaps_based = OverlapsBasedConfusionMatrix(annotated_events=annotated_respiratory_events, detected_events=detected_respiratory_events)\n",
+    "confusion_matrix__sample_based = SampleBasedConfusionMatrix(time_index=sliding_window_dataset.signals.index, annotated_events=annotated_respiratory_events, detected_events=detected_respiratory_events)\n",
+    "macro_scores = confusion_matrix__overlaps_based.get_macro_scores()\n",
+    "print(\"Overlaps based macro scores:\")\n",
     "print(f\" -> {macro_scores}\")\n",
+    "print(f\"Sample-based acquired metrics:\\n\"\n",
+    "      f\" - Accuracy (5-class-based): {confusion_matrix__sample_based.get_accuracy()}\\n\"\n",
+    "      f\" - Cohen Kappa (5-class-based): {confusion_matrix__sample_based.get_cohen_kappa()}\\n\"\n",
+    "      f\" - Accuracy (binary-based): {confusion_matrix__sample_based.get_binary_accuracy()}\\n\"\n",
+    "      f\" - Cohen Kappa (binary-based): {confusion_matrix__sample_based.get_binary_cohen_kappa()}\")\n",
     "\n",
-    "confusion_matrix.plot(title=\"Confusion matrix for classification confidence over a single dataset\")\n"
+    "confusion_matrix__overlaps_based.plot(title=\"Confusion matrix for classification confidence over a single dataset\")\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -497,7 +442,7 @@
    "outputs": [],
    "source": [
     "# Use training dataset folders as per train-test-split\n",
-    "data_folder = DATA_PATH / \"Physionet_preprocessed\"\n",
+    "data_folder = DATA_PATH / \"training\"\n",
     "train_test_folders = read_train_test_split_yaml(input_yaml=TRAIN_TEST_SPLIT_YAML, prefix_base_folder=data_folder)\n",
     "dataset_folders = train_test_folders.test\n",
     "del train_test_folders\n",
@@ -604,19 +549,27 @@
     "n_detected_events: int = 0\n",
     "n_detected_annotations: int = 0\n",
     "n_overlaps: int = 0\n",
+    "confusion_matrixes: Dict[str, List] = {\"dataset_names\": [], \"overlap_based_matrixes\": [], \"sample_based_matrixes\": [], \"annotation_recalls\": []}\n",
     "for sliding_window_dataset in tqdm(sliding_window_datasets, total=len(sliding_window_datasets), desc=\"Determine metrics\"):\n",
+    "    confusion_matrixes[\"dataset_names\"] += [sliding_window_dataset.dataset_name]\n",
     "    detected_events = detected_events_dict[sliding_window_dataset.dataset_name]\n",
     "    n_detected_events += len(detected_events)\n",
     "    n_annotated_events += len(sliding_window_dataset.respiratory_events)\n",
     "\n",
     "    cm_ = OverlapsBasedConfusionMatrix(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
+    "    confusion_matrixes[\"overlap_based_matrixes\"] += [cm_]\n",
     "    overall_confusion_matrix__overlap_based += cm_\n",
     "\n",
     "    cm_ = SampleBasedConfusionMatrix(time_index=sliding_window_dataset.signals.index, annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
+    "    confusion_matrixes[\"sample_based_matrixes\"] += [cm_]\n",
     "    overall_confusion_matrix__sample_based += cm_\n",
     "\n",
     "    o_ = get_n_detected_annotations(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events)\n",
     "    n_detected_annotations += o_\n",
+    "    annotation_recall_ = o_ / len(sliding_window_dataset.respiratory_events) if len(sliding_window_dataset.respiratory_events) > 0 else 1.0\n",
+    "    annotation_recall_ = min(1.0, annotation_recall_)\n",
+    "    annotation_recall_ = max(0.0, annotation_recall_)\n",
+    "    confusion_matrixes[\"annotation_recalls\"] += [annotation_recall_]\n",
     "    o_ = len(get_overlaps(annotated_events=sliding_window_dataset.respiratory_events, detected_events=detected_events))\n",
     "    n_overlaps += o_\n",
     "\n",
@@ -659,90 +612,6 @@
    "source": [
     "overall_confusion_matrix__overlap_based.plot(title=f\"Confusion matrix for classification confidence over {len(dataset_folders)} datasets\")"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
